--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -24,13 +24,13 @@ on:
         default: 'yarn'
 
 env:
-  PACKR_MAJOR_VERSION: 
-  PACKR_MINOR_VERSION: 
-  PACKR_REVISION: 
+  PACKR_MAJOR_VERSION:
+  PACKR_MINOR_VERSION:
+  PACKR_REVISION:
 
 jobs:
   pr-labeler:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v3
@@ -42,78 +42,78 @@ jobs:
 
   packr-versions:
     name: Packr version modifier
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - name: Build major version env
-      if: ${{ inputs.major_version != ''}}
-      run: echo 'PACKR_MAJOR_VERSION=--major ${{ inputs.major_version }}' >> $GITHUB_ENV
+      - name: Build major version env
+        if: ${{ inputs.major_version != ''}}
+        run: echo 'PACKR_MAJOR_VERSION=--major ${{ inputs.major_version }}' >> $GITHUB_ENV
 
-    - name: Build minor version env
-      if: ${{ inputs.minor_version != ''}}
-      run: echo 'PACKR_MINOR_VERSION=--minor ${{ inputs.minor_version }}' >> $GITHUB_ENV
+      - name: Build minor version env
+        if: ${{ inputs.minor_version != ''}}
+        run: echo 'PACKR_MINOR_VERSION=--minor ${{ inputs.minor_version }}' >> $GITHUB_ENV
 
-    - name: Build revision env
-      if: ${{ inputs.revision != ''}}
-      run: echo 'PACKR_REVISION=--revision ${{ inputs.revision }}' >> $GITHUB_ENV
-  
+      - name: Build revision env
+        if: ${{ inputs.revision != ''}}
+        run: echo 'PACKR_REVISION=--revision ${{ inputs.revision }}' >> $GITHUB_ENV
+
   build-lint-test:
     name: Build/Lint/Test/Packr
     needs: [packr-versions]
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0 
-    
-    - uses: actions/setup-node@v3
-      with:
-        node-version: latest
-        cache: ${{ inputs.package_manager }}
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: Create environment variables for yarn commands
-      if: inputs.package_manager == 'yarn'
-      run: |
-        echo "CLI_INSTALL=yarn install --frozen-lockfile" >> $GITHUB_ENV
-        echo "CLI_BUILD=yarn build" >> $GITHUB_ENV
-        echo "CLI_LINT=yarn lint" >> $GITHUB_ENV
-        echo "CLI_PACKR=yarn packr" >> $GITHUB_ENV
+      - uses: actions/setup-node@v3
+        with:
+          node-version: latest
+          cache: ${{ inputs.package_manager }}
 
-    - name: Create environment variables for npm commands
-      if: inputs.package_manager == 'npm'
-      run: |
-        echo "CLI_INSTALL=npm ci" >> $GITHUB_ENV
-        echo "CLI_BUILD=npm run build" >> $GITHUB_ENV
-        echo "CLI_LINT=npm run lint" >> $GITHUB_ENV
-        echo "CLI_PACKR=npm run packr" >> $GITHUB_ENV
-        
-    - name: Install dependencies
-      run: ${{ env.CLI_INSTALL }}
+      - name: Create environment variables for yarn commands
+        if: inputs.package_manager == 'yarn'
+        run: |
+          echo "CLI_INSTALL=yarn install --frozen-lockfile" >> $GITHUB_ENV
+          echo "CLI_BUILD=yarn build" >> $GITHUB_ENV
+          echo "CLI_LINT=yarn lint" >> $GITHUB_ENV
+          echo "CLI_PACKR=yarn packr" >> $GITHUB_ENV
 
-    - name: Build app
-      run: ${{ env.CLI_BUILD }}
+      - name: Create environment variables for npm commands
+        if: inputs.package_manager == 'npm'
+        run: |
+          echo "CLI_INSTALL=npm ci" >> $GITHUB_ENV
+          echo "CLI_BUILD=npm run build" >> $GITHUB_ENV
+          echo "CLI_LINT=npm run lint" >> $GITHUB_ENV
+          echo "CLI_PACKR=npm run packr" >> $GITHUB_ENV
 
-    - name: Lint app
-      run: ${{ env.CLI_LINT }}
+      - name: Install dependencies
+        run: ${{ env.CLI_INSTALL }}
 
-    - name: Test app
-      run: ${{ inputs.package_manager }} test
+      - name: Build app
+        run: ${{ env.CLI_BUILD }}
 
-    - name: Packr
-      if: ${{ inputs.use_packr == true }}
-      run: ${{ env.CLI_PACKR }} ${{ env.PACKR_MAJOR_VERSION }} ${{ env.PACKR_MINOR_VERSION }} ${{ env.PACKR_REVISION }}
+      - name: Lint app
+        run: ${{ env.CLI_LINT }}
 
-      # note - this uploads the build as dist, please note to download it will be called dist for deploy contexts
-    - name: Store build artifacts
-      if: ${{ inputs.package_folder != ''}}
-      uses: actions/upload-artifact@v3
-      with:
-        name: dist
-        path: ${{ inputs.package_folder }}
-        retention-days: 1
+      - name: Test app
+        run: ${{ inputs.package_manager }} test
 
-    - name: Store coverage artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: code-coverage-report
-        path: coverage/lcov.info
-        retention-days: 1
+      - name: Packr
+        if: ${{ inputs.use_packr == true }}
+        run: ${{ env.CLI_PACKR }} ${{ env.PACKR_MAJOR_VERSION }} ${{ env.PACKR_MINOR_VERSION }} ${{ env.PACKR_REVISION }}
+
+        # note - this uploads the build as dist, please note to download it will be called dist for deploy contexts
+      - name: Store build artifacts
+        if: ${{ inputs.package_folder != ''}}
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: ${{ inputs.package_folder }}
+          retention-days: 1
+
+      - name: Store coverage artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: coverage/lcov.info
+          retention-days: 1
