--- a/.github/workflows/typescript.sonarcloud.yml
+++ b/.github/workflows/typescript.sonarcloud.yml
@@ -18,23 +18,22 @@ env:
 jobs:
   sonarcloud:
     name: Sonarcloud Analysis
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      - name: Retrieve coverage artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: code-coverage-report
+          path: coverage
 
-    - name: Retrieve coverage artifacts
-      uses: actions/download-artifact@v3
-      with:
-        name: code-coverage-report
-        path: coverage
-      
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      with:
-        args: >
-          -Dsonar.organization=${{ env.SONAR_ORG }}
-          -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
-          -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        with:
+          args: >
+            -Dsonar.organization=${{ env.SONAR_ORG }}
+            -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
