--- a/.github/workflows/release.notifier.yml
+++ b/.github/workflows/release.notifier.yml
@@ -26,7 +26,7 @@ permissions:
 
 jobs:
   prod-notify:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Get Latest Release List
         if: ${{ success() }}
