--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -30,14 +30,19 @@ env:
   PACKR_MAJOR_VERSION:
   PACKR_MINOR_VERSION:
   PACKR_REVISION:
+permissions:
+  contents: read
 
 jobs:
   pr-labeler:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
-      - uses: TimonVS/pr-labeler-action@v3
+      - uses: TimonVS/pr-labeler-action@v4.1.1
         with:
           configuration-path: .github/pr-labeler.yml
         env:
