--- a/.github/workflows/release.notifier.yml
+++ b/.github/workflows/release.notifier.yml
@@ -31,7 +31,7 @@ permissions:
 jobs:
   prod-notify:
     runs-on: ubuntu-latest
-    if: github.event_name != release
+    if: github.event_name != 'release'
     steps:
       - name: Get commits
         uses: octokit/request-action@v2.x
@@ -96,7 +96,7 @@ jobs:
 
   prod-notify-tag:
     runs-on: ubuntu-latest
-    if: github.event_name == release
+    if: github.event_name == 'release'
     steps:
       - name: Get Latest Release List
         if: ${{ success() }}
