add test to main

--- a/.github/workflows/test.release.notifier.yml
+++ b/.github/workflows/test.release.notifier.yml
@@ -2,7 +2,7 @@ name: 'Test the release notification'
 on:
   push:
     branches:
-      - test/release-notifier
+      - main
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
