test backtick issue

--- a/.github/workflows/test.release.notifier.yml
+++ b/.github/workflows/test.release.notifier.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - test/test
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
