--- a/.github/workflows/test.release.notifier.yml
+++ b/.github/workflows/test.release.notifier.yml
@@ -3,13 +3,12 @@ on:
   push:
     branches:
       - main
-      - test/test
 env:
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
   SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 jobs:
   notify-prod:
-    uses: flexbase-eng/.github/.github/workflows/release.notifier.yml@test/test
+    uses: flexbase-eng/.github/.github/workflows/release.notifier.yml@main
     with:
       gha_deployment_failure_url: https://github.com/flexbase-eng/flexbase-web/actions/workflows/deploy-prod.yml
       release_title: Flexbase Test Notification
