--- a/.github/workflows/deploy.web.netlify.yml
+++ b/.github/workflows/deploy.web.netlify.yml
@@ -1,4 +1,4 @@
-name: Deploy web app to Netlify
+name: Netlify Deploy
 on:
   workflow_call:
     inputs:
@@ -6,38 +6,41 @@ on:
         required: true
         type: string
       build_artifact_download:
-        required: true
+        required: false
         type: string
         default: dist
       build_artifact_download_path:
         required: true
         type: string
-        default: dist
       package_manager:
         required: false
         type: string
         default: yarn
+      is_prod:
+        required: false
+        type: boolean
+        default: false
 env:
   NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  NETLIFY_SITE_ID: ${{ inputs.netlify_site_id}}
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # pull down compiled build artifact to build_artifact_download_path locally
-      - uses: actions/download-artifact@v3
+      - if: inputs.is_prod == true
+        env:
+          NETLIFY_PROD: --prod
+
+      - name: Retrieve build artifacts
+        uses: actions/download-artifact@v3
         with:
           name: ${{ inputs.build_artifact_download }}
           path: ${{ inputs.build_artifact_download_path }}
-      # deploy artifact
+
       - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v1.2
+        uses: netlify/actions/cli@master
         with:
-          publish-dir: ${{ inputs.build_artifact_download_path }}
-          production-branch: main
-          deploy-message: 'Deploy from GitHub Actions'
-          enable-pull-request-comment: true
-          enable-commit-comment: true
-          overwrites-pull-request-comment: true
+          args: deploy --dir=${{ inputs.build_artifact_download_path }} ${{ env.NETLIFY_PROD }}
         timeout-minutes: 1
