--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -62,17 +62,17 @@ jobs:
         if: inputs.package_manager == 'yarn'
         run: |
           echo "CLI_INSTALL=yarn install --frozen-lockfile" >> $GITHUB_ENV
-          echo "CLI_BUILD=yarn ${{ build_command }}" >> $GITHUB_ENV
-          echo "CLI_LINT=yarn ${{ lint_command }}" >> $GITHUB_ENV
-          echo "CLI_TEST=yarn ${{ test_command }}" >> $GITHUB_ENV
+          echo "CLI_BUILD=yarn ${{ inputs.build_command }}" >> $GITHUB_ENV
+          echo "CLI_LINT=yarn ${{ inputs.lint_command }}" >> $GITHUB_ENV
+          echo "CLI_TEST=yarn ${{ inputs.test_command }}" >> $GITHUB_ENV
 
       - name: Create environment variables for npm commands
         if: inputs.package_manager == 'npm'
         run: |
           echo "CLI_INSTALL=npm ci" >> $GITHUB_ENV
-          echo "CLI_BUILD=npm run ${{ build_command }}" >> $GITHUB_ENV
-          echo "CLI_LINT=npm run ${{ lint_command }}" >> $GITHUB_ENV
-          echo "CLI_TEST=npm run ${{ test_command }}" >> $GITHUB_ENV
+          echo "CLI_BUILD=npm run ${{ inputs.build_command }}" >> $GITHUB_ENV
+          echo "CLI_LINT=npm run ${{ inputs.lint_command }}" >> $GITHUB_ENV
+          echo "CLI_TEST=npm run ${{ inputs.test_command }}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
         with:
