--- a/.github/workflows/release.drafter.yml
+++ b/.github/workflows/release.drafter.yml
@@ -1,4 +1,4 @@
-name: Update Github Release Draft
+name: Github Release Draft
 # this should be used explicitly for push and pull_request -> opened, reopened, synchronized
 
 on:
@@ -8,22 +8,12 @@ permissions:
   contents: read
 
 jobs:
-  update_release_draft:
+  release_draft:
     permissions:
       contents: write # for release-drafter/release-drafter to create a github release
       pull-requests: write # for release-drafter/release-drafter to add label to PR
     runs-on: ubuntu-latest
     steps:
-      # (Optional) GitHub Enterprise requires GHE_HOST variable set
-      #- name: Set GHE_HOST
-      #  run: |
-      #    echo "GHE_HOST=${GITHUB_SERVER_URL##https:\/\/}" >> $GITHUB_ENV
-
-      # Drafts your next Release notes as Pull Requests are merged into "master"
-      - uses: release-drafter/release-drafter@v5
-        # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
-        # with:
-        #   config-name: my-config.yml
-        #   disable-autolabeler: true
+      - uses: release-drafter/release-drafter@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
