--- a/.github/workflows/deploy.web.netlify.yml
+++ b/.github/workflows/deploy.web.netlify.yml
@@ -22,8 +22,11 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.deploy-to-netlify.outputs.deploy-url }}
     steps:
-      - if: inputs.is_prod == true
+      - name: Is production deployment
+        if: inputs.is_prod == true
         run: echo "NETLIFY_PROD=--prod" >> $GITHUB_ENV
 
       - name: Retrieve build artifacts
@@ -33,7 +36,7 @@ jobs:
           path: ${{ inputs.build_artifact_download_path }}
 
       - name: Deploy to Netlify
-        uses: netlify/actions/cli@master
+        uses: flexbase-eng/actions/netlify-cli@main
         with:
           args: deploy --dir=${{ inputs.build_artifact_download_path }} ${{ env.NETLIFY_PROD }}
         timeout-minutes: 3
