--- a/.github/workflows/deploy.web.netlify.yml
+++ b/.github/workflows/deploy.web.netlify.yml
@@ -42,10 +42,14 @@ jobs:
           args: deploy --dir=${{ inputs.build_artifact_download_path }} ${{ env.NETLIFY_PROD }}
         timeout-minutes: 3
 
-  output:
-    needs: deploy
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo Deployed to ${{ jobs.deploy.outputs.deployUrl }}
-          echo Production url ${{ jobs.deploy.outputs.prodUrl }}
+      - name: Comment on PR
+        uses: actions/github-script@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.issues.createComment({
+              issue_number: ${{ github.event.number }},
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: ':upload-cloud: Deployed to ${{ steps.deploy-to-netlify.outputs.deploy-url }}'
+            })
