--- a/.github/workflows/deploy.web.netlify.yml
+++ b/.github/workflows/deploy.web.netlify.yml
@@ -45,6 +45,8 @@ jobs:
 
       - name: Comment on PRa
         uses: actions/github-script@main
+        env:
+          DEPLOY_URL: ${{ steps.netlify_deploy.outputs.netlify_output.deploy_url }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -52,5 +54,5 @@ jobs:
               issue_number: ${{ github.event.number }},
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: ':cloud: Deployed to ${{ steps.netlify_deploy.outputs.netlify_output.deploy_url }}'
+              body: ':cloud: Deployed to ${{ env.DEPLOY_URL }}'
             })
