--- a/.github/workflows/deploy.web.netlify.yml
+++ b/.github/workflows/deploy.web.netlify.yml
@@ -23,8 +23,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     outputs:
-      deployUrl: ${{ steps.netlify_deploy.outputs.netlify_output.deploy_url }}
-      prodUrl: ${{ steps.netlify_deploy.outputs.netlify_output.url }}
+      deployUrl: ${{ steps.netlify_deploy.outputs.deploy_url }}
+      prodUrl: ${{ fromJson(steps.netlify_deploy.outputs.netlify_output).url }}
     steps:
       - name: Is production deployment
         if: inputs.is_prod == true
@@ -43,13 +43,10 @@ jobs:
           args: deploy --dir=${{ inputs.build_artifact_download_path }} ${{ env.NETLIFY_PROD }}
         timeout-minutes: 2
 
-      - name: debugging
-        run: echo ${{  steps.netlify_deploy.outputs.* }}
-
       - name: Comment on PRa
         uses: actions/github-script@main
         env:
-          DEPLOY_URL: ${{ steps.netlify_deploy.outputs.netlify_output.deploy_url }}
+          DEPLOY_URL: ${{ steps.netlify_deploy.outputs.deploy_url }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
