--- a/.github/workflows/deploy.npm.yml
+++ b/.github/workflows/deploy.npm.yml
@@ -71,6 +71,9 @@ jobs:
         run: ${{ env.CLI_INSTALL }}
 
       - name: Update semantic version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
         run: npx semantic-release
 
       - name: Publish
