--- a/.github/workflows/build.typescript.yml
+++ b/.github/workflows/build.typescript.yml
@@ -30,6 +30,10 @@ on:
         required: false
         type: string
         default: 'latest'
+      packr_command:
+        required: false
+        type: string
+        default: ''
       coverage_artifact_folder:
         required: false
         type: string
@@ -63,6 +67,7 @@ jobs:
           echo "CLI_BUILD=yarn ${{ inputs.build_command }}" >> $GITHUB_ENV
           echo "CLI_LINT=yarn ${{ inputs.lint_command }}" >> $GITHUB_ENV
           echo "CLI_TEST=yarn ${{ inputs.test_command }}" >> $GITHUB_ENV
+          echo "CLI_PACR=yarn ${{ inputs.packr_command }}" >> $GITHUB_ENV
 
       - name: Create environment variables for npm commands
         if: inputs.package_manager == 'npm'
@@ -71,6 +76,7 @@ jobs:
           echo "CLI_BUILD=npm run ${{ inputs.build_command }}" >> $GITHUB_ENV
           echo "CLI_LINT=npm run ${{ inputs.lint_command }}" >> $GITHUB_ENV
           echo "CLI_TEST=npm run ${{ inputs.test_command }}" >> $GITHUB_ENV
+          echo "CLI_PACR=npm run ${{ inputs.packr_command }}" >> $GITHUB_ENV
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -82,6 +88,14 @@ jobs:
         with:
           node-version: ${{ inputs.node_version }}
           cache: ${{ inputs.package_manager }}
+
+      - name: Configure github internal package repo access
+        env:
+          PACKAGE_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
+        run: |
+          echo "//npm.pkg.github.com/:_authToken=$PACKAGE_TOKEN" > .npmrc
+          echo "@flexbase-eng:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "always-auth=true" >> .npmrc
 
       - name: Install dependencies
         run: ${{ env.CLI_INSTALL }}
@@ -95,7 +109,11 @@ jobs:
       - name: Lint
         run: ${{ env.CLI_LINT }}
 
-      - name: Upload Artifacts
+      - name: Packr
+        if: ${{ inputs.packr_command != '' }}
+        run: ${{ env.CLI_PACKR }}
+
+      - name: Upload Build Artifacts
         if: ${{ inputs.artifact_folder != ''}}
         uses: actions/upload-artifact@v3
         with:
