--- a/.github/workflows/typescript.build.yml
+++ b/.github/workflows/typescript.build.yml
@@ -9,6 +9,7 @@ on:
         required: false
         type: boolean
         default: true
+        deprecationMessage: 'use build.typescript.yml instead'
       major_version:
         required: false
         type: string
@@ -22,7 +23,7 @@ on:
         required: false
         type: string
         default: 'yarn'
-      prisma: 
+      prisma:
         required: false
         type: boolean
         default: false
@@ -77,7 +78,7 @@ jobs:
           cache: ${{ inputs.package_manager }}
 
       - name: add github internal package repo access
-        env: 
+        env:
           PACKAGE_TOKEN: ${{ secrets.PACKAGE_TOKEN }}
         run: |
           echo "//npm.pkg.github.com/:_authToken=$PACKAGE_TOKEN" > .npmrc
@@ -106,7 +107,7 @@ jobs:
       - name: Generate client
         if: inputs.prisma == true
         run: yarn generate
-        
+
       - name: Build app
         run: ${{ env.CLI_BUILD }}
 
